<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authorization.LoginActivity"

    android:background="@color/backgroundPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:theme="@style/BigTextView"
        android:layout_marginTop="@dimen/top_vertical_margin"/>

    <TextView
        android:layout_marginTop="@dimen/top_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:theme="@style/standTextView"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:background="@drawable/round"
        android:hint="@string/prompt_email"
        android:text="stepan@mail.ru"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_title"
        android:theme="@style/standTextView"
        android:layout_marginTop="@dimen/top_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin" />

    <EditText

        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:background="@drawable/round"
        android:inputType="textPassword"
        android:text="password"
        android:hint="@string/prompt_password"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:background="@drawable/round_button"
            android:text="@string/login_text"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/btn_go_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:background="@drawable/round_button"
            android:text="@string/login_text"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.2" />
    </LinearLayout>



</LinearLayout>